Updated dependencies and Java 11